Add new status subresources to store hashes of lastly observed k8s and Tyk resources. These resources will be used to understand if any changed happened to CRD. If any change happened, Operator perform required API calls on Tyk to update the resource. Otherwise, it will skip update API calls to minimize load on your Tyk instance.
This is still WIP, requires changes in SecurityPolicy controller as
well.
